--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-    "name": "elizaos.b8-plugin",
-    "version": "1.0.0",
-    "description": "BITCORE Neural Net Link for ElizaOS",
-    "main": "dist/index.js",
-    "scripts": {
-        "test": "vitest run",
-        "build": "tsc"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "Apache-2.0",
-    "devDependencies": {
-        "@types/node": "^25.0.3",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.9.3",
-        "vitest": "^4.0.16",
-        "zod": "^4.3.4"
-    },
-    "dependencies": {
-        "@elizaos/core": "^1.0.0",
-        "axios": "^1.13.2",
-        "zod": "^4.3.4"
-    }
+  "name": "elizaos.b8-plugin",
+  "version": "1.0.0",
+  "description": "BITCORE Neural Net Link for ElizaOS",
+  "main": "dist/index.js",
+  "scripts": {
+    "test": "vitest run",
+    "build": "tsc"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "@types/node": "^25.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.16",
+    "zod": "^4.3.4"
+  },
+  "dependencies": {
+    "@elizaos/core": "^1.7.0",
+    "axios": "^1.13.2",
+    "zod": "^4.3.4"
+  },
+  "type": "module"
 }
